# hictools

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.py  config_template.yml  environment.yml  example.ipynb  main.nf  nextflow.config  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonapp.yml
benchmark/: README.md  benchmark.py
benchmark/results/: peaks_10000.txt  peaks_40000.txt  peaks_5000.txt
hictools/: api.py  chrommatrix.py  cli.py  compare.py  compartment.py  config.py  io.py  peaks.py  reconstruct.py  tad.py  test.db  utils.py
hictools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
hictools/hgserver/: __init__.py  cli.py  monitor.py  server.py  store.py  utils.py
hictools/hgserver/ui/: index.html
hictools/utils/: .nfs0000000d016298f400000cec  __init__.py  _numtools.pyx  cnumtools.pyx  io.py  numtools.py  tools.cpp  utils.py
test/: conftest.py  test.sh  test_api.py  test_io.py  test_utils.py
