[tool.poetry]
name = "hictools"
version = "0.0.3"
description = "Tools for handling hic data"
license = "MIT"
authors = ["BAKEZQ <zhongquan789@gmail.com>"]
readme = "README.md"
repository = "https://github.com/zhqu1148980644/hictools"
keywords = ["hic"]
build = "build.py"
packages = [{ include = "hictools" }]
include = [
    'poetry.lock', 
    'main.nf', 
    'nextflow.config', 
    'environment.yml'
]
exclude = ["**/.nfs*"]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy'
]

[tool.poetry.scripts]
hictools = "hictools.cli:cli"


[tool.poetry.dependencies]
python = "^3.6"
Cython = "^0.29.13"
Click = "^7.0"
numpy = "^1.17"
scipy = "^1.3"
pandas = "^0.25.2"
matplotlib = "^3.1"
statsmodels = "^0.10.1"
pomegranate = "^0.11.2"
scikit-learn = "^0.21.3"
colorama = "^0.4.1"
decorator = "^4.4"
setproctitle = "^1.1"
pyBigWig = "^0.3.17"
clodius = "^0.11.4"
ujson = "^1.35"
watchgod = "^0.5.0"
databases = "^0.2.5"
fastapi = "^0.42.0"
uvicorn = "^0.9.1"
slugid = "^2.0"
cooler = "^0.8.6"
ray = "^0.7.5"
psutil = "^5.6"
aiosqlite = "^0.10.0"
email-validator = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
fire = "^0.2.1"
wget = "^3.2"

[build-system]
requires = ["poetry>=0.12", 'setuptools', 'wheel', 'Cython', 'numpy']
build-backend = "poetry.masonry.api"
